--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "bcrypt": "^5.1.1",
+    "mongodb": "^6.2.0",
+    "mongoose": "^7.6.3",
     "next": "13.5.4",
+    "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18"
   },
