--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 GOOGLE_ID=175975754880-lci4q89j55kbo8kftpbd9ongbq59nc5c.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-MONGODB_URI=mongodb+srv://bmpalagi:zzuJNukKpsCr6aiUVg7NQZ@cluster0.w2antxi.mongodb.net/?retryWrites=true&w=majority
+GOOGLE_CLIENT_SECRET=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
+MONGODB_URI=mongodb+srv://bmpalagi:vaWqpzgWiMfPgc25@cluster0.w2antxi.mongodb.net/?retryWrites=true&w=majority
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
-NEXTAUTH_SECRET=mnvAZPov2YGapz9H3nL8urn9PxL/X9gtBJ+/zJbdYFU=
+NEXTAUTH_SECRET=j8r4V4cmZfTg/EQ7qbK8gsd0dUL9XEsUfvHCrX2QUP0=
