--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   deploy:
-    if: github.repository == 'bpalagi/bradpalagi'
+    if: github.repository == 'bpalagi/CustomFeedGuy'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
