--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "bcrypt": "^5.1.1",
+    "convertkit-react": "^1.5.5",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "next": "13.5.4",
     "next-auth": "^4.24.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
